# graphqlite

./: .gitignore  BUG_FIXES.md  Makefile  PARSER_MIGRATION.md  README.md  demo.db  graphqlite_test.db  simple_test.db  test_demo.db  test_param_id  test_param_match
.angreal/: task_build.py  task_dev.py  task_perf.py  task_test.py  utils.py
.metis/: config.toml  metis.db  vision.md
bindings/rust/: Cargo.toml  README.md  build.rs
bindings/rust/src/: connection.rs  error.rs  graph.rs  lib.rs  manager.rs  platform.rs  query_builder.rs  result.rs  utils.rs
bindings/rust/src/algorithms/: centrality.rs  community.rs  components.rs  mod.rs  parsing.rs  paths.rs  similarity.rs  traversal.rs
bindings/rust/src/graph/: batch.rs  bulk.rs  edges.rs  mod.rs  nodes.rs  queries.rs
bindings/rust/tests/: integration.rs
examples/llm-graphrag/: README.md  analyze.py  hotpotqa.py  ingest.py  ollama_client.py  pyproject.toml  rag.py
examples/nanographrag/: README.md  chunking.py  demo.py  entity_extractor.py  graphqlite_graph.py  pyproject.toml
examples/nanographrag/docs/: accel.md  activision_blizzard.md  airbnb.md  airtable.md  amazon.md  amd.md  andreessen_horowitz.md  anthropic.md  apple.md  atlassian.md  benchmark.md  blue_origin.md  canva.md  cisco.md  cloudflare.md  cohere.md  coinbase.md  crowdstrike.md  databricks.md  datadog.md  deepmind.md  dell.md  discord.md  doordash.md  elastic.md  electronic_arts.md  elon_musk.md  epic_games.md  figma.md  github.md  gitlab.md  google.md  greylock.md  hashicorp.md  hp.md  hpe.md  hugging_face.md  ibm.md  instacart.md  intel.md  (+60 more)
(+630 files in other folders)
