[project]
name = "llm-graphrag"
version = "0.1.0"
description = "LLM-powered GraphRAG using GraphQLite and Ollama"
requires-python = ">=3.10"
dependencies = [
    "graphqlite",
    "sqlite-vec",
    "numpy>=1.21.0",
    "sentence-transformers>=2.2.0",
    "httpx>=0.25.0",
    "spacy>=3.7.0",
]

[tool.uv]
dev-dependencies = []
